General clean-up. Fixed padding and spacing, added link python script, got rid of duplicate import statements.

--- a/styles.css
+++ b/styles.css
@@ -125,7 +125,8 @@ h1 {
   color: #093426;
   decoration: bold;
   background-color: #9A8B4F;
-  min-height: 100vh;
+  min-height: 100vh;padding: 0px 200px 0px 200px;
+  padding: 0px 0px 50px 0px;
   }
 
 h2 {
